<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="setStatViewModel"
            type="com.pepcy.nihongo.ui.learning.SetStatViewModel" />
    </data>

    <ScrollView
        android:background="@color/grey_back"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/fragment_bottom_bar_padding" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.learning.SetStatFragment"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stat_accuracy_per_day"
                android:fontFamily="@font/sourcehansans_cn_normal"
                android:textStyle="bold"
                android:textSize="18sp"
                android:id="@+id/set_stat_accuracy_title"
                app:layout_constraintTop_toTopOf="parent"
                android:gravity="center" />

            <com.github.mikephil.charting.charts.LineChart
                android:layout_width="match_parent"
                android:layout_height="@dimen/chart_height"
                android:id="@+id/set_stat_accuracy_chart"
                app:layout_constraintTop_toBottomOf="@id/set_stat_accuracy_title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stat_number_per_day"
                android:fontFamily="@font/sourcehansans_cn_normal"
                android:textStyle="bold"
                android:textSize="18sp"
                android:id="@+id/set_stat_learn_title"
                app:layout_constraintTop_toBottomOf="@id/set_stat_accuracy_chart"
                android:gravity="center" />

            <com.github.mikephil.charting.charts.LineChart
                android:layout_width="match_parent"
                android:layout_height="@dimen/chart_height"
                android:id="@+id/set_stat_learn_chart"
                app:layout_constraintTop_toBottomOf="@id/set_stat_learn_title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stat_time_per_day"
                android:fontFamily="@font/sourcehansans_cn_normal"
                android:textStyle="bold"
                android:textSize="18sp"
                android:id="@+id/set_stat_time_title"
                app:layout_constraintTop_toBottomOf="@id/set_stat_learn_chart"
                android:gravity="center" />

            <com.github.mikephil.charting.charts.LineChart
                android:layout_width="match_parent"
                android:layout_height="@dimen/chart_height"
                android:id="@+id/set_stat_time_chart"
                app:layout_constraintTop_toBottomOf="@id/set_stat_time_title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stat_ratio"
                android:fontFamily="@font/sourcehansans_cn_normal"
                android:textStyle="bold"
                android:textSize="18sp"
                android:id="@+id/set_stat_ratio_title"
                app:layout_constraintTop_toBottomOf="@id/set_stat_time_chart"
                android:gravity="center" />

            <com.github.mikephil.charting.charts.PieChart
                android:layout_width="match_parent"
                android:layout_height="@dimen/chart_height"
                android:id="@+id/set_stat_ratio_chart"
                app:layout_constraintTop_toBottomOf="@id/set_stat_ratio_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>